using url loader instead of assest loader as face an issue with loading images in webpack see: https://stackoverflow.com/questions/37171767/how-to-load-assets-correctly-from-webpack-generated-npm-package/54619370\#54619370"

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
 .dropdown-menu-img {
     width: 64px;
     height: 64px;
-    background: url('./assets/down-white.png');
+    /* background: url('./assets/down-white.png'); */
     transition: background 400ms ease-in-out;
     cursor: pointer;
 }
@@ -57,7 +57,7 @@
 .dropdown-menu:hover .dropdown-menu-img {
     width: 64px;
     height: 64px;
-    background: url('./assets/down-blue.png');
+    /* background: url('./assets/down-blue.png'); */
 }
 
 .dropdown-menu:active .dropdown-menu-img {
